hphp/test/slow/collection_classes/set_map_ret_type.php.expectf
bool(true)
bool(true)
HipHop Fatal error: Uncaught exception 'InvalidArgumentException' with message 'Only integer values and string values may be used with Sets' in :
Stack trace:
#0 %s/slow/collection_classes/set_map_ret_type.php(19): HH\Set->map()
#1 %s/slow/collection_classes/set_map_ret_type.php(22): main()
#2 {main}
